<resources>
    <string name="app_name">TrainSpotter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navBarHeader">Train Spotter</string>
    <string name="navBarSub">tezksoftware\@tezk</string>

    <!-- My app strings, English -->
    <string name="please_wait_whilst_initialising">Please wait whilst initialising</string>
    <string name="train_id">Train ID :</string>
    <string name="date">Date :</string>
    <string name="number">Number :</string>
    <string name="name">Name :</string>
    <string name="livery">Livery :</string>
    <string name="operator">Operator :</string>
    <string name="depot">Depot :</string>
    <string name="class_id">Class :</string>
    <string name="no_data_error_message">No data returned from the server</string>
    <string name="class_string">Class</string>
    <string name="no_sightings_logged">You have not logged any sightings for this class</string>
    <string name="sighting_count_message">You have logged sightings on %1$d out of %2$d trains</string>
    <string name="last_spotted">Last spotted :</string>
    <string name="where">Where :</string>
    <string name="last_seen">Seen :</string>
    <string name="map_loading_please_wait">Map loading, please wait</string>
    <string name="none_reported">None reported</string>
    <string name="missing_train_number_error">You haven\'t set a train number!\nPress back to close without saving</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="favourites">Favourites</string>
    <string name="history">History</string>
    <string name="loading_message">Please wait, loading</string>
    <string name="class_label">Class :</string>
    <string name="loading">Loading</string>
    <string name="about">About</string>
    <string name="location">Location :</string>
    <string name="log_spot_title">Log your sighting</string>
    <string name="search_for_train">Search for a train</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
